ansible/files/iptables
# Generated by iptables-save v1.4.21 on Wed Apr 26 14:07:09 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [230:19591]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-NODEPORT-NON-LOCAL - [0:0]
:KUBE-SERVICES - [0:0]
:OS_FIREWALL_ALLOW - [0:0]
-A INPUT -m comment --comment "Ensure that non-local NodePort traffic can flow" -j KUBE-NODEPORT-NON-LOCAL
-A INPUT -i tun0 -m comment --comment "traffic from docker for internet" -j ACCEPT
-A INPUT -p udp -m multiport --dports 4789 -m comment --comment "001 vxlan incoming" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j OS_FIREWALL_ALLOW
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o lbr0 -j DOCKER
-A FORWARD -o lbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lbr0 ! -o lbr0 -j ACCEPT
-A FORWARD -i lbr0 -o lbr0 -j ACCEPT
-A FORWARD -s 10.128.0.0/14 -j ACCEPT
-A FORWARD -d 10.128.0.0/14 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A DOCKER-ISOLATION -j RETURN
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:thift-port has no endpoints" -m tcp --dport 9160 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.33.68/32 -p tcp -m comment --comment "default/registry-console:registry-console has no endpoints" -m tcp --dport 9000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.81.54/32 -p tcp -m comment --comment "openshift-infra/heapster: has no endpoints" -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:cql-port has no endpoints" -m tcp --dport 9042 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:ssl-port has no endpoints" -m tcp --dport 7001 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.89.166/32 -p tcp -m comment --comment "ci/jenkins:jnlp has no endpoints" -m tcp --dport 50000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.170.34/32 -p tcp -m comment --comment "openshift-infra/hawkular-metrics:https-endpoint has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:tcp-port has no endpoints" -m tcp --dport 7000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.30.89.166/32 -p tcp -m comment --comment "ci/jenkins:web has no endpoints" -m tcp --dport 8080 -j REJECT --reject-with icmp-port-unreachable
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 53248 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 50825 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 20048 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 111 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 4001 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 8444 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 8053 -j ACCEPT
-A OS_FIREWALL_ALLOW -p udp -m state --state NEW -m udp --dport 8053 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 24224 -j ACCEPT
-A OS_FIREWALL_ALLOW -p udp -m state --state NEW -m udp --dport 24224 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 2224 -j ACCEPT
-A OS_FIREWALL_ALLOW -p udp -m state --state NEW -m udp --dport 5404 -j ACCEPT
-A OS_FIREWALL_ALLOW -p udp -m state --state NEW -m udp --dport 5405 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 10250 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 10255 -j ACCEPT
-A OS_FIREWALL_ALLOW -p udp -m state --state NEW -m udp --dport 10255 -j ACCEPT
-A OS_FIREWALL_ALLOW -p udp -m state --state NEW -m udp --dport 4789 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
COMMIT
# Completed on Wed Apr 26 14:07:09 2017
# Generated by iptables-save v1.4.21 on Wed Apr 26 14:07:09 2017
*nat
:PREROUTING ACCEPT [5:440]
:INPUT ACCEPT [1:96]
:OUTPUT ACCEPT [174:15875]
:POSTROUTING ACCEPT [174:15875]
:DOCKER - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORT-CONTAINER - [0:0]
:KUBE-NODEPORT-HOST - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PORTALS-CONTAINER - [0:0]
:KUBE-PORTALS-HOST - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-2NR4C3A6YR5DOWQX - [0:0]
:KUBE-SEP-3XVRISYYAQW6VPMT - [0:0]
:KUBE-SEP-G575GTYIITB7CSZH - [0:0]
:KUBE-SEP-GOCMWRFXQW3FUC6I - [0:0]
:KUBE-SEP-HCWJWF3NXAZGO3SF - [0:0]
:KUBE-SEP-IFQI2YYV6I5EAEZ4 - [0:0]
:KUBE-SEP-ITZJYNSNIORH2GV6 - [0:0]
:KUBE-SEP-NBZ5D4F4HQMXB7HR - [0:0]
:KUBE-SEP-NUKRHUSOQPKH2Y7A - [0:0]
:KUBE-SEP-OV7G3PRIW6USC2L5 - [0:0]
:KUBE-SEP-SM6HWWC2E62M232X - [0:0]
:KUBE-SEP-U54AQE3DBRDYFJUW - [0:0]
:KUBE-SEP-VMFSIO4QAXL2PPEW - [0:0]
:KUBE-SEP-XCNZK5RROANVGZUN - [0:0]
:KUBE-SEP-XH2L7VQA2AH5QEBQ - [0:0]
:KUBE-SEP-XSEQZ2D5TBO7HL5N - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-3VQ6B3MLH7E2SZT4 - [0:0]
:KUBE-SVC-4JCRTMMYZAAYMIJ2 - [0:0]
:KUBE-SVC-5WKXUCCBPW4WXMKW - [0:0]
:KUBE-SVC-76GJ7A5QDKD24MJX - [0:0]
:KUBE-SVC-BA6I5HTZKAAAJT56 - [0:0]
:KUBE-SVC-CJA3WQU3HB4I73WK - [0:0]
:KUBE-SVC-CUWWUHHNOYUE7XCB - [0:0]
:KUBE-SVC-D2ZALS3SCA2AJ3EF - [0:0]
:KUBE-SVC-DEGCXZMVXZMJS2KL - [0:0]
:KUBE-SVC-DFAQJXL4ZYGY46GM - [0:0]
:KUBE-SVC-DG5KQBK4MYQSG2UE - [0:0]
:KUBE-SVC-ECTPRXTXBM34L34Q - [0:0]
:KUBE-SVC-GHI47GONQ7IAARGL - [0:0]
:KUBE-SVC-GQKZAHCS5DTMHUQ6 - [0:0]
:KUBE-SVC-IFVMONO6R7UKLXIJ - [0:0]
:KUBE-SVC-IKV43KYNCXS2W7KZ - [0:0]
:KUBE-SVC-IX66ZOOPCHQI56BJ - [0:0]
:KUBE-SVC-LXGWHLGFLZ6UGNWA - [0:0]
:KUBE-SVC-MK544LZQCMZ6S62E - [0:0]
:KUBE-SVC-MSVZI6DZZNOM75U6 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-QHXYKSK44HXPJ5ET - [0:0]
:KUBE-SVC-UEPZFSNEHNGUA737 - [0:0]
-A PREROUTING -m comment --comment "handle ClusterIPs; NOTE: this must be before the NodePort rules" -j KUBE-PORTALS-CONTAINER
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -m addrtype --dst-type LOCAL -m comment --comment "handle service NodePorts; NOTE: this must be the last rule in the chain" -j KUBE-NODEPORT-CONTAINER
-A OUTPUT -m comment --comment "handle ClusterIPs; NOTE: this must be before the NodePort rules" -j KUBE-PORTALS-HOST
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -m comment --comment "handle service NodePorts; NOTE: this must be the last rule in the chain" -j KUBE-NODEPORT-HOST
-A POSTROUTING -s 10.128.0.0/23 ! -o lbr0 -j MASQUERADE
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 10.128.0.0/14 ! -d 10.128.0.0/14 -j MASQUERADE
-A DOCKER -i lbr0 -j RETURN
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-2NR4C3A6YR5DOWQX -s 10.130.0.4/32 -m comment --comment "ci/selenium-firefox:4444-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-2NR4C3A6YR5DOWQX -p tcp -m comment --comment "ci/selenium-firefox:4444-tcp" -m tcp -j DNAT --to-destination 10.130.0.4:4444
-A KUBE-SEP-3XVRISYYAQW6VPMT -s 10.100.100.21/32 -m comment --comment "default/kubernetes:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-3XVRISYYAQW6VPMT -p udp -m comment --comment "default/kubernetes:dns" -m recent --set --name KUBE-SEP-3XVRISYYAQW6VPMT --mask 255.255.255.255 --rsource -m udp -j DNAT --to-destination 10.100.100.21:8053
-A KUBE-SEP-G575GTYIITB7CSZH -s 10.130.0.2/32 -m comment --comment "ci/selenium-chrome:4444-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-G575GTYIITB7CSZH -p tcp -m comment --comment "ci/selenium-chrome:4444-tcp" -m tcp -j DNAT --to-destination 10.130.0.2:4444
-A KUBE-SEP-GOCMWRFXQW3FUC6I -s 10.129.0.4/32 -m comment --comment "ci/gogs:22-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-GOCMWRFXQW3FUC6I -p tcp -m comment --comment "ci/gogs:22-tcp" -m tcp -j DNAT --to-destination 10.129.0.4:22
-A KUBE-SEP-HCWJWF3NXAZGO3SF -s 10.100.100.21/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-HCWJWF3NXAZGO3SF -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-HCWJWF3NXAZGO3SF --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.100.100.21:8443
-A KUBE-SEP-IFQI2YYV6I5EAEZ4 -s 10.129.0.2/32 -m comment --comment "ci/pact-broker:" -j KUBE-MARK-MASQ
-A KUBE-SEP-IFQI2YYV6I5EAEZ4 -p tcp -m comment --comment "ci/pact-broker:" -m tcp -j DNAT --to-destination 10.129.0.2:80
-A KUBE-SEP-ITZJYNSNIORH2GV6 -s 10.129.0.3/32 -m comment --comment "ci/nexus:5000-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ITZJYNSNIORH2GV6 -p tcp -m comment --comment "ci/nexus:5000-tcp" -m tcp -j DNAT --to-destination 10.129.0.3:5000
-A KUBE-SEP-NBZ5D4F4HQMXB7HR -s 10.129.0.8/32 -m comment --comment "ci/selenium-chrome:4444-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-NBZ5D4F4HQMXB7HR -p tcp -m comment --comment "ci/selenium-chrome:4444-tcp" -m tcp -j DNAT --to-destination 10.129.0.8:4444
-A KUBE-SEP-NUKRHUSOQPKH2Y7A -s 10.131.0.3/32 -m comment --comment "default/docker-registry:5000-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-NUKRHUSOQPKH2Y7A -p tcp -m comment --comment "default/docker-registry:5000-tcp" -m recent --set --name KUBE-SEP-NUKRHUSOQPKH2Y7A --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.131.0.3:5000
-A KUBE-SEP-OV7G3PRIW6USC2L5 -s 10.100.100.23/32 -m comment --comment "default/router:443-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-OV7G3PRIW6USC2L5 -p tcp -m comment --comment "default/router:443-tcp" -m tcp -j DNAT --to-destination 10.100.100.23:443
-A KUBE-SEP-SM6HWWC2E62M232X -s 10.100.100.21/32 -m comment --comment "default/kubernetes:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-SM6HWWC2E62M232X -p tcp -m comment --comment "default/kubernetes:dns-tcp" -m recent --set --name KUBE-SEP-SM6HWWC2E62M232X --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.100.100.21:8053
-A KUBE-SEP-U54AQE3DBRDYFJUW -s 10.129.0.3/32 -m comment --comment "ci/nexus:8081-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-U54AQE3DBRDYFJUW -p tcp -m comment --comment "ci/nexus:8081-tcp" -m tcp -j DNAT --to-destination 10.129.0.3:8081
-A KUBE-SEP-VMFSIO4QAXL2PPEW -s 10.129.0.7/32 -m comment --comment "ci/selenium-firefox:4444-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-VMFSIO4QAXL2PPEW -p tcp -m comment --comment "ci/selenium-firefox:4444-tcp" -m tcp -j DNAT --to-destination 10.129.0.7:4444
-A KUBE-SEP-XCNZK5RROANVGZUN -s 10.100.100.23/32 -m comment --comment "default/router:80-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-XCNZK5RROANVGZUN -p tcp -m comment --comment "default/router:80-tcp" -m tcp -j DNAT --to-destination 10.100.100.23:80
-A KUBE-SEP-XH2L7VQA2AH5QEBQ -s 10.100.100.23/32 -m comment --comment "default/router:1936-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-XH2L7VQA2AH5QEBQ -p tcp -m comment --comment "default/router:1936-tcp" -m tcp -j DNAT --to-destination 10.100.100.23:1936
-A KUBE-SEP-XSEQZ2D5TBO7HL5N -s 10.129.0.4/32 -m comment --comment "ci/gogs:3031-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-XSEQZ2D5TBO7HL5N -p tcp -m comment --comment "ci/gogs:3031-tcp" -m tcp -j DNAT --to-destination 10.129.0.4:3030
-A KUBE-SERVICES -d 172.30.0.1/32 -p udp -m comment --comment "default/kubernetes:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-3VQ6B3MLH7E2SZT4
-A KUBE-SERVICES -d 172.30.98.184/32 -p tcp -m comment --comment "ci/selenium-chrome:4444-tcp cluster IP" -m tcp --dport 4444 -j KUBE-SVC-MK544LZQCMZ6S62E
-A KUBE-SERVICES -d 172.30.162.46/32 -p tcp -m comment --comment "ci/gogs:22-tcp cluster IP" -m tcp --dport 22 -j KUBE-SVC-DFAQJXL4ZYGY46GM
-A KUBE-SERVICES -d 172.30.162.46/32 -p tcp -m comment --comment "ci/gogs:3031-tcp cluster IP" -m tcp --dport 3031 -j KUBE-SVC-UEPZFSNEHNGUA737
-A KUBE-SERVICES -d 172.30.126.255/32 -p tcp -m comment --comment "ci/selenium-firefox:4444-tcp cluster IP" -m tcp --dport 4444 -j KUBE-SVC-CJA3WQU3HB4I73WK
-A KUBE-SERVICES -d 172.30.12.29/32 -p tcp -m comment --comment "ci/nexus:8081-tcp cluster IP" -m tcp --dport 8081 -j KUBE-SVC-QHXYKSK44HXPJ5ET
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:thift-port cluster IP" -m tcp --dport 9160 -j KUBE-SVC-76GJ7A5QDKD24MJX
-A KUBE-SERVICES -d 172.30.22.83/32 -p tcp -m comment --comment "default/router:80-tcp cluster IP" -m tcp --dport 80 -j KUBE-SVC-GQKZAHCS5DTMHUQ6
-A KUBE-SERVICES -d 172.30.33.68/32 -p tcp -m comment --comment "default/registry-console:registry-console cluster IP" -m tcp --dport 9000 -j KUBE-SVC-DEGCXZMVXZMJS2KL
-A KUBE-SERVICES -d 172.30.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 172.30.0.1/32 -p tcp -m comment --comment "default/kubernetes:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-BA6I5HTZKAAAJT56
-A KUBE-SERVICES -d 172.30.81.54/32 -p tcp -m comment --comment "openshift-infra/heapster: cluster IP" -m tcp --dport 80 -j KUBE-SVC-LXGWHLGFLZ6UGNWA
-A KUBE-SERVICES -d 172.30.12.29/32 -p tcp -m comment --comment "ci/nexus:5000-tcp cluster IP" -m tcp --dport 5000 -j KUBE-SVC-IX66ZOOPCHQI56BJ
-A KUBE-SERVICES -d 172.30.98.122/32 -p tcp -m comment --comment "default/docker-registry:5000-tcp cluster IP" -m tcp --dport 5000 -j KUBE-SVC-ECTPRXTXBM34L34Q
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:cql-port cluster IP" -m tcp --dport 9042 -j KUBE-SVC-IFVMONO6R7UKLXIJ
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:ssl-port cluster IP" -m tcp --dport 7001 -j KUBE-SVC-MSVZI6DZZNOM75U6
-A KUBE-SERVICES -d 172.30.22.83/32 -p tcp -m comment --comment "default/router:443-tcp cluster IP" -m tcp --dport 443 -j KUBE-SVC-IKV43KYNCXS2W7KZ
-A KUBE-SERVICES -d 172.30.89.166/32 -p tcp -m comment --comment "ci/jenkins:jnlp cluster IP" -m tcp --dport 50000 -j KUBE-SVC-D2ZALS3SCA2AJ3EF
-A KUBE-SERVICES -d 172.30.170.34/32 -p tcp -m comment --comment "openshift-infra/hawkular-metrics:https-endpoint cluster IP" -m tcp --dport 443 -j KUBE-SVC-CUWWUHHNOYUE7XCB
-A KUBE-SERVICES -d 172.30.87.152/32 -p tcp -m comment --comment "openshift-infra/hawkular-cassandra:tcp-port cluster IP" -m tcp --dport 7000 -j KUBE-SVC-5WKXUCCBPW4WXMKW
-A KUBE-SERVICES -d 172.30.22.83/32 -p tcp -m comment --comment "default/router:1936-tcp cluster IP" -m tcp --dport 1936 -j KUBE-SVC-4JCRTMMYZAAYMIJ2
-A KUBE-SERVICES -d 172.30.166.212/32 -p tcp -m comment --comment "ci/pact-broker: cluster IP" -m tcp --dport 80 -j KUBE-SVC-GHI47GONQ7IAARGL
-A KUBE-SERVICES -d 172.30.89.166/32 -p tcp -m comment --comment "ci/jenkins:web cluster IP" -m tcp --dport 8080 -j KUBE-SVC-DG5KQBK4MYQSG2UE
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-3VQ6B3MLH7E2SZT4 -m comment --comment "default/kubernetes:dns" -m recent --rcheck --seconds 180 --reap --name KUBE-SEP-3XVRISYYAQW6VPMT --mask 255.255.255.255 --rsource -j KUBE-SEP-3XVRISYYAQW6VPMT
-A KUBE-SVC-3VQ6B3MLH7E2SZT4 -m comment --comment "default/kubernetes:dns" -j KUBE-SEP-3XVRISYYAQW6VPMT
-A KUBE-SVC-4JCRTMMYZAAYMIJ2 -m comment --comment "default/router:1936-tcp" -j KUBE-SEP-XH2L7VQA2AH5QEBQ
-A KUBE-SVC-BA6I5HTZKAAAJT56 -m comment --comment "default/kubernetes:dns-tcp" -m recent --rcheck --seconds 180 --reap --name KUBE-SEP-SM6HWWC2E62M232X --mask 255.255.255.255 --rsource -j KUBE-SEP-SM6HWWC2E62M232X
-A KUBE-SVC-BA6I5HTZKAAAJT56 -m comment --comment "default/kubernetes:dns-tcp" -j KUBE-SEP-SM6HWWC2E62M232X
-A KUBE-SVC-CJA3WQU3HB4I73WK -m comment --comment "ci/selenium-firefox:4444-tcp" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-VMFSIO4QAXL2PPEW
-A KUBE-SVC-CJA3WQU3HB4I73WK -m comment --comment "ci/selenium-firefox:4444-tcp" -j KUBE-SEP-2NR4C3A6YR5DOWQX
-A KUBE-SVC-DFAQJXL4ZYGY46GM -m comment --comment "ci/gogs:22-tcp" -j KUBE-SEP-GOCMWRFXQW3FUC6I
-A KUBE-SVC-ECTPRXTXBM34L34Q -m comment --comment "default/docker-registry:5000-tcp" -m recent --rcheck --seconds 180 --reap --name KUBE-SEP-NUKRHUSOQPKH2Y7A --mask 255.255.255.255 --rsource -j KUBE-SEP-NUKRHUSOQPKH2Y7A
-A KUBE-SVC-ECTPRXTXBM34L34Q -m comment --comment "default/docker-registry:5000-tcp" -j KUBE-SEP-NUKRHUSOQPKH2Y7A
-A KUBE-SVC-GHI47GONQ7IAARGL -m comment --comment "ci/pact-broker:" -j KUBE-SEP-IFQI2YYV6I5EAEZ4
-A KUBE-SVC-GQKZAHCS5DTMHUQ6 -m comment --comment "default/router:80-tcp" -j KUBE-SEP-XCNZK5RROANVGZUN
-A KUBE-SVC-IKV43KYNCXS2W7KZ -m comment --comment "default/router:443-tcp" -j KUBE-SEP-OV7G3PRIW6USC2L5
-A KUBE-SVC-IX66ZOOPCHQI56BJ -m comment --comment "ci/nexus:5000-tcp" -j KUBE-SEP-ITZJYNSNIORH2GV6
-A KUBE-SVC-MK544LZQCMZ6S62E -m comment --comment "ci/selenium-chrome:4444-tcp" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-NBZ5D4F4HQMXB7HR
-A KUBE-SVC-MK544LZQCMZ6S62E -m comment --comment "ci/selenium-chrome:4444-tcp" -j KUBE-SEP-G575GTYIITB7CSZH
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 180 --reap --name KUBE-SEP-HCWJWF3NXAZGO3SF --mask 255.255.255.255 --rsource -j KUBE-SEP-HCWJWF3NXAZGO3SF
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-HCWJWF3NXAZGO3SF
-A KUBE-SVC-QHXYKSK44HXPJ5ET -m comment --comment "ci/nexus:8081-tcp" -j KUBE-SEP-U54AQE3DBRDYFJUW
-A KUBE-SVC-UEPZFSNEHNGUA737 -m comment --comment "ci/gogs:3031-tcp" -j KUBE-SEP-XSEQZ2D5TBO7HL5N
COMMIT
# Completed on Wed Apr 26 14:07:09 2017
